--- a/.github/workflows/qa_tests.yml
+++ b/.github/workflows/qa_tests.yml
@@ -27,27 +27,32 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Pytest and Generate HTML Report
+      - name: Run Tests and Generate HTML Report
         run: |
           mkdir -p reports
           pytest -v --html=reports/report.html --self-contained-html || true
-          echo "✅ reports folder:"
+          echo "✅ reports folder content:"
           ls -la reports
 
-      - name: Copy report into docs folder for GitHub Pages
+      # ✅ This ensures report is always available for download
+      - name: Upload HTML report artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-html-report
+          path: reports/report.html
+
+      - name: Copy report into docs folder
         run: |
           mkdir -p docs
           cp -f reports/report.html docs/report.html
-          echo "✅ docs folder:"
+          echo "✅ docs folder content:"
           ls -la docs
 
-      - name: Commit & Push report.html
+      - name: Commit and push report.html to docs
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-
           git add docs/report.html
           git status
-
-          git commit -m "Update QA HTML report" || echo "Nothing to commit"
-          git push
+          git commit -m "Publish latest report" || echo "Nothing to commit"
+          git push origin main
